Fixed a bug on form grid spacing.

--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -240,7 +240,10 @@ input.full {
 	padding-bottom:0;
 }
 @for $i from 1 through $grid-columns {
-	.g#{$i} {
-		@extend %gformspacing;
+	form .grid,
+	form .row {
+		.g#{$i} {
+			@extend %gformspacing;
+		}
 	}
 }
